# wgpu_voxel

./: .gitignore  Cargo.toml  README.md  model.vox  model2.vox
assets/shaders/: main_shader.wgsl  rt_shader.wgsl  taa_shader.wgsl
assets/shaders/rt/: box.wgsl  chunk.wgsl  constants.wgsl  ray.wgsl  utils.wgsl  voxel.wgsl
assets/vox/: model1.vox  small.vox
examples/: rt.rs  viewer.rs
src/: lib.rs  main.rs
src/engine/: mod.rs  state.rs
src/renderer/: buffer.rs  error.rs  mod.rs  pipeline.rs
src/renderer/hal/: buffer.rs  depth_texture.rs  mod.rs  pipeline.rs  taa.rs  texture.rs
src/renderer/pbr/: camera.rs  mesh.rs  mod.rs  model.rs  transform.rs
src/renderer/rt/: camera.rs  mod.rs  rt_camera.rs  transform.rs
src/renderer/shaders/: _tmp  main_shader.wgsl  rt_shader.wgsl  shader1.wgsl  shader2.wgsl  taa_shader.wgsl
src/renderer/shaders/rt/: camera.wgsl  chunk.wgsl  ray.wgsl  utils.wgsl
src/renderer/voxel/: block.rs  chunk.rs  mod.rs  model.rs
tracengine/: Cargo.toml
tracengine/examples/: viewer.rs
tracengine/src/: lib.rs
tracengine/src/renderer/: error.rs  mod.rs
tracengine/src/renderer/hal/: buffer.rs  mod.rs  pipeline.rs  taa.rs  texture.rs
tracengine/src/renderer/pbr/: mesh.rs  mod.rs
tracengine/src/renderer/rt/: camera.rs  transform.rs
tracengine/src/renderer/voxel/: block.rs  chunk.rs
voxelcraft/: Cargo.toml
voxelcraft/src/: app.rs  main.rs  tracer.rs
voxelcraft/src/camera/: mod.rs
