[package]
name = "wgpu_voxel"
version = "0.1.0"
edition = "2021"

[dependencies]
game-loop = { version = "=1.1.0", features = ["winit"] }
env_logger = "0.10"
log = "0.4"
wgpu = "0.19.3"
pollster = "0.3.0"
anyhow = "1.0.86"
hecs = { version = "0.10.5", features = ["macros"] }
parking_lot = "0.12.3"
rayon = "1.10.0"
bytemuck = "1.16.1"
thiserror = "1.0.62"
serde = { version = "1.0.204", features = ["derive"] }
bincode = "1.3.3"
dot_vox = "5.1.1"
nalgebra-glm = "0.19.0"
