[package]
name = "wgpu_voxel"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
bincode = "1.3.3"
bytemuck = { version = "1.16.1", features = ["derive"] }
dot_vox = "5.1.1"
env_logger = "0.10"
game-loop = { version = "=1.1.0", features = ["winit"] }
hecs = { version = "0.10.5", features = ["macros"] }
log = "0.4"
nalgebra-glm = { version = "0.19.0", features = ["serde-serialize", "convert-bytemuck"] }
pollster = "0.3.0"
pretty-type-name = "1.0.1"
rayon = "1.10.0"
serde = { version = "1.0.204", features = ["derive", "rc"] }
thiserror = "1.0.62"
wgpu = "0.19.3"
