[package]
name = "wgpu_voxel"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
bytemuck = { version = "1.16.1", features = ["derive"] }
clap = { version = "4.5.9", features = ["derive"] }
derive-getters = "0.4.0"
dot_vox = "5.1.1"
game-loop = { version = "=1.1.0", features = ["winit"] }
hecs = { version = "0.10.5", features = ["macros"] }
nalgebra-glm = { version = "0.19.0", features = ["serde-serialize", "convert-bytemuck"] }
pollster = "0.3.0"
pretty-type-name = "1.0.1"
rand = "0.8.5"
serde = { version = "1.0.204", features = ["derive", "rc"] }
structstruck = "0.4.1"
thiserror = "1.0.62"
wgpu = "0.19.3"
